[tool.poetry]
name = "pyrhubarb"
version = "0.0.7"
description = "A Python framework for multi-modal document understanding with generative AI"
authors = ["Rhubarb Developers <rhubarb-developers@amazon.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/awslabs/rhubarb"
repository = "https://github.com/awslabs/rhubarb"
documentation = "https://github.com/awslabs/rhubarb"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "rhubarb", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
pillow = "^10.3.0"
pdfplumber = "^0.11.0"
jsonschema = "^4.21.1"
pydantic = "^2.6.4"
fastparquet = "^2024.5.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
boto3 = "^1.35.20"
botocore = "^1.35.20"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pre-commit = "^3.7.0"
sphinx = "^7.3.4"
furo = "^2024.1.29"
nbsphinx = "^0.9.3"
sphinx-copybutton = "^0.5.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
moto = "^4.2.0"
bandit = "^1.7.5"
safety = "^2.3.0"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
length-sort = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=rhubarb",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=30"
]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow running"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/awslabs/rhubarb"
"Issues" = "https://github.com/awslabs/rhubarb/issues"
