[tool.poetry]
name = "pyrhubarb-mcp"
version = "0.1.0"
description = "MCP server for Rhubarb document and video understanding capabilities"
authors = ["Rhubarb Developers <rhubarb-developers@amazon.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/awslabs/rhubarb"
repository = "https://github.com/awslabs/rhubarb"
documentation = "https://awslabs.github.io/rhubarb/"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "pyrhubarb_mcp", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11"
fastmcp = "^0.3.0"
pyrhubarb = "^0.0.7"
boto3 = "^1.35.20"
botocore = "^1.35.20"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
length-sort = true

[tool.poetry.scripts]
pyrhubarb-mcp = "pyrhubarb_mcp.cli:main_sync"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/awslabs/rhubarb"
"Issues" = "https://github.com/awslabs/rhubarb/issues"
